@@ -26,6 +26,7 @@ Maintenance
 * Experimental support of actively maintained Civetweb to replace Mongoose 3.8
 * Fix issue 64 (OpenBSD support)
 * Fix static compilation of DCMTK 3.6.2 on Fedora
+* Upgrade to Boost 1.65.1 in static builds
 
 
 Version 1.3.0 (2017-07-19)
